--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@ transform: scale(1);
         }
     }, 1000); // Update every 1 second
 </script>
+   <footer style="position: absolute;bottom: 0; background-color: rgb(255, 255, 255); width: 100%; text-align: center; text-transform: uppercase;  "><a href="https://t.me/AdexpertAlok" style="color: black; text-decoration: none;">  Advertisment By <strong style="color: blue; text-decoration:underline; text-transform: none;"> AdexpertAlok </strong></a></footer>
+
 </body>
 
 </html>
+
 
